Add optional tool window so we can refresh the project

--- a/plugin1/resources/META-INF/plugin.xml
+++ b/plugin1/resources/META-INF/plugin.xml
@@ -30,6 +30,8 @@
         <externalSystemManager implementation="com.codeblast.plugin1.FooSystemManager"/>
         <projectService serviceImplementation="com.codeblast.plugin1.FooSettings"/>
         <projectService serviceImplementation="com.codeblast.plugin1.FooLocalSettings"/>
+        <toolWindow id="Foo" anchor="right" icon="Icons.Icon"
+                    factoryClass="com.codeblast.plugin1.FooToolWindowFactory"/>
     </extensions>
 
     <actions>
