--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 
+.DS_Store
+
 *.iml
 
 ## Directory-based project format:
